--- a/sass/_var.sass
+++ b/sass/_var.sass
@@ -6,3 +6,4 @@ $line-color: #D9DADB
 $subscribe-text-color: #939699
 $header-text-color: #4B5157
 $hotnews-bg: #30363D
+$recommendation-card-color: #F5F5F5
