--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/_mobilemenu.sass'
 // Подключение стилей для горячих новостей
 @import 'blocks/_hotnews.sass'
+// Подключение стилей для рекомендаций
+@import 'blocks/_recomended.sass'
 // Подключение стилей для адаптива
 @import '_media.sass'
