--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,6 +6,9 @@ body
   position: relative
   height: 100%
   font-family: 'Lato', sans-serif
+  background-color: #E5E5E5
+body.lock 
+    overflow: hidden
 a
   text-decoration: none
 button
