--- a/sass/blocks/_mobilemenu.sass
+++ b/sass/blocks/_mobilemenu.sass
@@ -1,11 +1,10 @@
 .mobile
   &-menu
-    visibility: hidden
     position: fixed
     top: 50px
     left: -100%
     z-index: 99
-    width: 65%
+    width: 35%
     height: 100%
     overflow: auto
     display: flex
@@ -18,6 +17,8 @@
       margin-bottom: 5px
       font-size: 14px
       line-height: 20px
+      &:last-child
+        margin-bottom: 0
     &__wrapper
       display: flex
       flex-direction: column
@@ -26,6 +27,7 @@
       padding-bottom: 20px
     &__icon
       fill: $white
+      margin-right: 3px
     &__search
       display: flex
       align-items: center
@@ -40,7 +42,7 @@
       list-style-type: none
       margin: 0
       padding: 0
-      padding-bottom: 100px
+      padding-bottom: 30px
     &__item
       margin-bottom: 15px
     &__link
@@ -66,6 +68,28 @@
       line-height: 20px
       &:placeholder
         color: $subscribe-text-color
+    &__subscribe
+      display: flex
+      flex-direction: column
+      align-items: center
+      margin-right: 0
+      padding-bottom: 300px
+      .subscribe
+        &__img
+          margin-right: 0
+          margin-bottom: 10px
+          border-bottom: 3px solid $burger-color
+        &__text, &__title
+          margin-bottom: 3px
+          color: $white
+        &__description
+          display: flex
+          flex-direction: column
+          align-items: center
 .degree
   display: flex
   flex-direction: row
+  align-items: center
+.active
+  &-menu
+    left: 0
