Create: recommendation section and responsive.

--- a/sass/_var.sass
+++ b/sass/_var.sass
@@ -7,3 +7,4 @@ $subscribe-text-color: #939699
 $header-text-color: #4B5157
 $hotnews-bg: #30363D
 $recommendation-card-color: #F5F5F5
+$blue-75: #4592FF
