--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -21,7 +21,15 @@
         padding-left: 20px
       &__img
         margin-right: 10px
-  
+  .recommended
+    margin-top: -269px
+    &__title
+      padding-top: 16px
+      padding-bottom: 16px
+  .recommendation
+    padding-top: 17px
+    padding-bottom: 17px
+
 @media screen and  ( max-width: 992px )
   .container
     max-width: 725px
@@ -63,6 +71,28 @@
   .mobile
     &-menu
       width: 60%
+  .recommended
+    margin-top: -220px
+    &__use
+      &-title
+        top: 265px
+        left: 35px
+        font-size: 35px
+        line-height: 45px
+        max-width: 425px
+    &__buttons
+      flex-direction: column
+      align-items: flex-start
+      left: 35px
+    &__button
+      margin-right: 0
+      margin-bottom: 15px
+    &__user
+      top: 35px
+      left: 35px
+    &__description
+      left: 35px
+      top: 225px
 
 @media screen and ( max-width: 767px )
   .container
@@ -82,30 +112,52 @@
     display: none
   .overlay
     margin-top: 134px
+  .recommended
+    &__right
+      width: 220px
+    &__description
+      top: 160px
+    &__use
+      &-title
+        top: 190px
+        max-width: 350px
 
 @media screen and ( max-width: 720px )
   .hotnew
     &__text
       width: 185px
+  .recommended
+    margin-top: -202px
 
 @media screen and ( max-width: 690px )
-   .hotnew
+  .hotnew
     &__text
       width: 170px
 
 @media screen and ( max-width: 660px )
-   .hotnew
-     &__img
-       padding-right: 15px
-     &__text
-       width: 145px
+  .hotnew
+    &__img
+      padding-right: 15px
+    &__text
+      width: 145px
+  .recommended
+    &__use
+      &-title
+        max-width: 300px
 
 @media screen and ( max-width: 590px )
-   .hotnew
-     &__text
-       width: 130px
+  .hotnew
+    &__text
+      width: 130px
+  .recommended
+    margin-top: -179px
+    &__use
+      &-title
+        max-width: 275px
 
 @media screen and ( max-width: 576px )
+  body.lock 
+    overflow: hidden
   .container
     max-width: 500px
     width: 90%
@@ -148,3 +200,73 @@
       border-right: 0
       order: -1
       margin-right: 15px
+  .recommended
+    margin-top: -60px
+    &__right
+      width: 140px
+    &__title
+      padding-left: 10px
+      padding-right: 10px
+    &__use
+      &-title
+        font-size: 32px
+        max-width: 260px
+  .recommendation
+    &__text
+      width: 140px
+      span
+        display: none
+      img
+        display: none
+  .active
+    .cube
+      top: 22px
+
+@media screen and ( max-width: 460px )
+  .recommended
+    &-wrapper
+      flex-direction: column
+    &__use
+      width: 100%
+      height: 450px
+      border-radius: 0 0 10px 10px
+      &-title
+        top: 155px
+        left: 20px
+        font-size: 27px
+    &__img
+      border-radius: 0 0 10px 10px
+    &__right
+      order: -1
+      width: 100%
+    &__user
+      top: 20px
+      left: 20px
+    &__description
+      top: 130px
+      left: 20px
+    &__buttons
+      top: 335px
+      left: 20px
+  .recommendation
+    display: flex
+    align-items: center
+    justify-content: center
+    width: 20%
+    padding-top: 20px
+    padding-bottom: 30px
+    border-right: 1px solid $line-color
+    &:last-child
+      border-right: none
+    &-wrapper
+      display: flex
+    &__title
+      transform: rotate(-90deg)
+      margin-bottom: 0
+  .active
+    .cube
+      display: none
+
+@media screen and ( max-width: 370px )
+  .recommended
+    margin-top: -30px
