--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/_hotnews.sass'
 // Подключение стилей для рекомендаций
 @import 'blocks/_recomended.sass'
+// Подключение стилей для текущих новостей
+@import 'blocks/_currentnews.sass'
 // Подключение стилей для адаптива
 @import '_media.sass'
