--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/_recomended.sass'
 // Подключение стилей для текущих новостей
 @import 'blocks/_currentnews.sass'
+// Подключение стилей для превью
+@import 'blocks/_preview.sass'
 // Подключение стилей для адаптива
 @import '_media.sass'
