--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -36,6 +36,14 @@
       grid-template-areas: "item-1 item-1  item-8" "item-1 item-1 item-8" "item-2 item-3 item-8" "item-2 item-3 item-8" "item-4 item-5 item-6" 
     &__item-7
       display: none
+  .main
+    &-section
+      max-width: 630px
+  .new
+    &-wrapper
+      align-items: center
+    &__img
+      width: 300px
 
 @media screen and  ( max-width: 992px )
   .container
@@ -115,7 +123,15 @@
         max-width: 570px
         font-size: 35px
         line-height: 45px
-
+  .main
+    &-section
+      max-width: 435px
+  .new
+    &-wrapper
+      flex-direction: column
+    &__img
+      margin-right: 0
+      margin-bottom: 25px
 
 @media screen and ( max-width: 767px )
   .container
@@ -155,6 +171,14 @@
         max-width: 490px
         font-size: 30px
         line-height: 40px
+  .main
+    &-section
+      max-width: 420px
+      margin-right: 15px
+  .new
+    &__img
+      width: 70%
+      height: 50%
 
 @media screen and ( max-width: 720px )
   .hotnew
@@ -267,6 +291,24 @@
         max-width: 320px
         font-size: 18px
         line-height: 25px
+  .news
+    &-container
+      flex-direction: column
+      max-width: 100%
+  .sidebar
+    order: -1
+    width: 100%
+    margin-bottom: 20px
+    &__item-5, &__item-6, &__item-7
+      display: none
+  .main
+    &-section
+      max-width: 100%
+      margin-right: 0
+  .new
+    &:nth-child(2), &:nth-child(5)
+      display: none
+    
       
 @media screen and ( max-width: 510px )
    .grid
