--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/_currentnews.sass'
 // Подключение стилей для превью
 @import 'blocks/_preview.sass'
+// Подключение стилей для новостей
+@import 'blocks/_news.sass'
 // Подключение стилей для адаптива
 @import '_media.sass'
