--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'blocks/_preview.sass'
 // Подключение стилей для новостей
 @import 'blocks/_news.sass'
+// Подключение стилей для новостей перед подвалом
+@import 'blocks/_newsbottom.sass'
 // Подключение стилей для адаптива
 @import '_media.sass'
