--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,5 +20,9 @@
 @import 'blocks/_news.sass'
 // Подключение стилей для новостей перед подвалом
 @import 'blocks/_newsbottom.sass'
+// Подключение стилей для подвала
+@import 'blocks/_footer.sass'
+// Подключение стилей для благодарности
+@import 'blocks/_thank.sass'
 // Подключение стилей для адаптива
 @import '_media.sass'
